cs352/proj2/y.output
Grammar

    0 $accept: goal $end

    1 goal: START statements END NEWLINE

    2 statements: statements statement
    3           | statement

    4 statement: DOC DOT WRITE OPENPAR arg_list CLOSEPAR separator
    5          | declaration separator
    6          | assignment separator
    7          | NEWLINE

    8 declaration: VAR ID
    9            | VAR ID EQUAL expression
   10            | VAR ID EQUAL object

   11 assignment: ID EQUAL expression
   12           | ID DOT ID EQUAL expression

   13 object: OPENBRACE definition_list CLOSEBRACE

   14 definition_list: definition_list COMMA newline_opt definition newline_opt
   15                | newline_opt definition newline_opt
   16                | /* empty */

   17 definition: ID COLON expression

   18 newline_opt: newline_opt NEWLINE
   19            | /* empty */

   20 arg_list: arg_list COMMA argument
   21         | argument
   22         | /* empty */

   23 argument: expression

   24 expression: expression '+' factor
   25           | expression '-' factor
   26           | factor

   27 factor: factor '*' token
   28       | factor '/' token
   29       | token

   30 token: ID
   31      | NUM
   32      | QUOTEDSTRING
   33      | BREAKLINE
   34      | OPENPAR expression CLOSEPAR
   35      | ID DOT ID

   36 separator: NEWLINE
   37          | SEMICOLON


Terminals, with rules where they appear

$end (0) 0
'*' (42) 27
'+' (43) 24
'-' (45) 25
'/' (47) 28
error (256)
ID (258) 8 9 10 11 12 17 30 35
QUOTEDSTRING (259) 32
BREAKLINE (260) 33
NUM (261) 31
VAR (262) 8 9 10
EQUAL (263) 9 10 11 12
SEMICOLON (264) 37
NEWLINE (265) 1 7 18 36
DOC (266) 4
WRITE (267) 4
OPENPAR (268) 4 34
CLOSEPAR (269) 4 34
COMMA (270) 14 20
DOT (271) 4 12 35
START (272) 1
END (273) 1
OPENBRACE (274) 13
CLOSEBRACE (275) 13
COLON (276) 17


Nonterminals, with rules where they appear

$accept (26)
    on left: 0
goal (27)
    on left: 1, on right: 0
statements (28)
    on left: 2 3, on right: 1 2
statement (29)
    on left: 4 5 6 7, on right: 2 3
declaration (30)
    on left: 8 9 10, on right: 5
assignment (31)
    on left: 11 12, on right: 6
object (32)
    on left: 13, on right: 10
definition_list (33)
    on left: 14 15 16, on right: 13 14
definition (34)
    on left: 17, on right: 14 15
newline_opt (35)
    on left: 18 19, on right: 14 15 18
arg_list (36)
    on left: 20 21 22, on right: 4 20
argument (37)
    on left: 23, on right: 20 21
expression (38)
    on left: 24 25 26, on right: 9 11 12 17 23 24 25 34
factor (39)
    on left: 27 28 29, on right: 24 25 26 27 28
token (40)
    on left: 30 31 32 33 34 35, on right: 27 28 29
separator (41)
    on left: 36 37, on right: 4 5 6


state 0

    0 $accept: . goal $end

    START  shift, and go to state 1

    goal  go to state 2


state 1

    1 goal: START . statements END NEWLINE

    ID       shift, and go to state 3
    VAR      shift, and go to state 4
    NEWLINE  shift, and go to state 5
    DOC      shift, and go to state 6

    statements   go to state 7
    statement    go to state 8
    declaration  go to state 9
    assignment   go to state 10


state 2

    0 $accept: goal . $end

    $end  shift, and go to state 11


state 3

   11 assignment: ID . EQUAL expression
   12           | ID . DOT ID EQUAL expression

    EQUAL  shift, and go to state 12
    DOT    shift, and go to state 13


state 4

    8 declaration: VAR . ID
    9            | VAR . ID EQUAL expression
   10            | VAR . ID EQUAL object

    ID  shift, and go to state 14


state 5

    7 statement: NEWLINE .

    $default  reduce using rule 7 (statement)


state 6

    4 statement: DOC . DOT WRITE OPENPAR arg_list CLOSEPAR separator

    DOT  shift, and go to state 15


state 7

    1 goal: START statements . END NEWLINE
    2 statements: statements . statement

    ID       shift, and go to state 3
    VAR      shift, and go to state 4
    NEWLINE  shift, and go to state 5
    DOC      shift, and go to state 6
    END      shift, and go to state 16

    statement    go to state 17
    declaration  go to state 9
    assignment   go to state 10


state 8

    3 statements: statement .

    $default  reduce using rule 3 (statements)


state 9

    5 statement: declaration . separator

    SEMICOLON  shift, and go to state 18
    NEWLINE    shift, and go to state 19

    separator  go to state 20


state 10

    6 statement: assignment . separator

    SEMICOLON  shift, and go to state 18
    NEWLINE    shift, and go to state 19

    separator  go to state 21


state 11

    0 $accept: goal $end .

    $default  accept


state 12

   11 assignment: ID EQUAL . expression

    ID            shift, and go to state 22
    QUOTEDSTRING  shift, and go to state 23
    BREAKLINE     shift, and go to state 24
    NUM           shift, and go to state 25
    OPENPAR       shift, and go to state 26

    expression  go to state 27
    factor      go to state 28
    token       go to state 29


state 13

   12 assignment: ID DOT . ID EQUAL expression

    ID  shift, and go to state 30


state 14

    8 declaration: VAR ID .
    9            | VAR ID . EQUAL expression
   10            | VAR ID . EQUAL object

    EQUAL  shift, and go to state 31

    $default  reduce using rule 8 (declaration)


state 15

    4 statement: DOC DOT . WRITE OPENPAR arg_list CLOSEPAR separator

    WRITE  shift, and go to state 32


state 16

    1 goal: START statements END . NEWLINE

    NEWLINE  shift, and go to state 33


state 17

    2 statements: statements statement .

    $default  reduce using rule 2 (statements)


state 18

   37 separator: SEMICOLON .

    $default  reduce using rule 37 (separator)


state 19

   36 separator: NEWLINE .

    $default  reduce using rule 36 (separator)


state 20

    5 statement: declaration separator .

    $default  reduce using rule 5 (statement)


state 21

    6 statement: assignment separator .

    $default  reduce using rule 6 (statement)


state 22

   30 token: ID .
   35      | ID . DOT ID

    DOT  shift, and go to state 34

    $default  reduce using rule 30 (token)


state 23

   32 token: QUOTEDSTRING .

    $default  reduce using rule 32 (token)


state 24

   33 token: BREAKLINE .

    $default  reduce using rule 33 (token)


state 25

   31 token: NUM .

    $default  reduce using rule 31 (token)


state 26

   34 token: OPENPAR . expression CLOSEPAR

    ID            shift, and go to state 22
    QUOTEDSTRING  shift, and go to state 23
    BREAKLINE     shift, and go to state 24
    NUM           shift, and go to state 25
    OPENPAR       shift, and go to state 26

    expression  go to state 35
    factor      go to state 28
    token       go to state 29


state 27

   11 assignment: ID EQUAL expression .
   24 expression: expression . '+' factor
   25           | expression . '-' factor

    '+'  shift, and go to state 36
    '-'  shift, and go to state 37

    $default  reduce using rule 11 (assignment)


state 28

   26 expression: factor .
   27 factor: factor . '*' token
   28       | factor . '/' token

    '*'  shift, and go to state 38
    '/'  shift, and go to state 39

    $default  reduce using rule 26 (expression)


state 29

   29 factor: token .

    $default  reduce using rule 29 (factor)


state 30

   12 assignment: ID DOT ID . EQUAL expression

    EQUAL  shift, and go to state 40


state 31

    9 declaration: VAR ID EQUAL . expression
   10            | VAR ID EQUAL . object

    ID            shift, and go to state 22
    QUOTEDSTRING  shift, and go to state 23
    BREAKLINE     shift, and go to state 24
    NUM           shift, and go to state 25
    OPENPAR       shift, and go to state 26
    OPENBRACE     shift, and go to state 41

    object      go to state 42
    expression  go to state 43
    factor      go to state 28
    token       go to state 29


state 32

    4 statement: DOC DOT WRITE . OPENPAR arg_list CLOSEPAR separator

    OPENPAR  shift, and go to state 44


state 33

    1 goal: START statements END NEWLINE .

    $default  reduce using rule 1 (goal)


state 34

   35 token: ID DOT . ID

    ID  shift, and go to state 45


state 35

   24 expression: expression . '+' factor
   25           | expression . '-' factor
   34 token: OPENPAR expression . CLOSEPAR

    CLOSEPAR  shift, and go to state 46
    '+'       shift, and go to state 36
    '-'       shift, and go to state 37


state 36

   24 expression: expression '+' . factor

    ID            shift, and go to state 22
    QUOTEDSTRING  shift, and go to state 23
    BREAKLINE     shift, and go to state 24
    NUM           shift, and go to state 25
    OPENPAR       shift, and go to state 26

    factor  go to state 47
    token   go to state 29


state 37

   25 expression: expression '-' . factor

    ID            shift, and go to state 22
    QUOTEDSTRING  shift, and go to state 23
    BREAKLINE     shift, and go to state 24
    NUM           shift, and go to state 25
    OPENPAR       shift, and go to state 26

    factor  go to state 48
    token   go to state 29


state 38

   27 factor: factor '*' . token

    ID            shift, and go to state 22
    QUOTEDSTRING  shift, and go to state 23
    BREAKLINE     shift, and go to state 24
    NUM           shift, and go to state 25
    OPENPAR       shift, and go to state 26

    token  go to state 49


state 39

   28 factor: factor '/' . token

    ID            shift, and go to state 22
    QUOTEDSTRING  shift, and go to state 23
    BREAKLINE     shift, and go to state 24
    NUM           shift, and go to state 25
    OPENPAR       shift, and go to state 26

    token  go to state 50


state 40

   12 assignment: ID DOT ID EQUAL . expression

    ID            shift, and go to state 22
    QUOTEDSTRING  shift, and go to state 23
    BREAKLINE     shift, and go to state 24
    NUM           shift, and go to state 25
    OPENPAR       shift, and go to state 26

    expression  go to state 51
    factor      go to state 28
    token       go to state 29


state 41

   13 object: OPENBRACE . definition_list CLOSEBRACE

    ID        reduce using rule 19 (newline_opt)
    NEWLINE   reduce using rule 19 (newline_opt)
    $default  reduce using rule 16 (definition_list)

    definition_list  go to state 52
    newline_opt      go to state 53


state 42

   10 declaration: VAR ID EQUAL object .

    $default  reduce using rule 10 (declaration)


state 43

    9 declaration: VAR ID EQUAL expression .
   24 expression: expression . '+' factor
   25           | expression . '-' factor

    '+'  shift, and go to state 36
    '-'  shift, and go to state 37

    $default  reduce using rule 9 (declaration)


state 44

    4 statement: DOC DOT WRITE OPENPAR . arg_list CLOSEPAR separator

    ID            shift, and go to state 22
    QUOTEDSTRING  shift, and go to state 23
    BREAKLINE     shift, and go to state 24
    NUM           shift, and go to state 25
    OPENPAR       shift, and go to state 26

    $default  reduce using rule 22 (arg_list)

    arg_list    go to state 54
    argument    go to state 55
    expression  go to state 56
    factor      go to state 28
    token       go to state 29


state 45

   35 token: ID DOT ID .

    $default  reduce using rule 35 (token)


state 46

   34 token: OPENPAR expression CLOSEPAR .

    $default  reduce using rule 34 (token)


state 47

   24 expression: expression '+' factor .
   27 factor: factor . '*' token
   28       | factor . '/' token

    '*'  shift, and go to state 38
    '/'  shift, and go to state 39

    $default  reduce using rule 24 (expression)


state 48

   25 expression: expression '-' factor .
   27 factor: factor . '*' token
   28       | factor . '/' token

    '*'  shift, and go to state 38
    '/'  shift, and go to state 39

    $default  reduce using rule 25 (expression)


state 49

   27 factor: factor '*' token .

    $default  reduce using rule 27 (factor)


state 50

   28 factor: factor '/' token .

    $default  reduce using rule 28 (factor)


state 51

   12 assignment: ID DOT ID EQUAL expression .
   24 expression: expression . '+' factor
   25           | expression . '-' factor

    '+'  shift, and go to state 36
    '-'  shift, and go to state 37

    $default  reduce using rule 12 (assignment)


state 52

   13 object: OPENBRACE definition_list . CLOSEBRACE
   14 definition_list: definition_list . COMMA newline_opt definition newline_opt

    COMMA       shift, and go to state 57
    CLOSEBRACE  shift, and go to state 58


state 53

   15 definition_list: newline_opt . definition newline_opt
   18 newline_opt: newline_opt . NEWLINE

    ID       shift, and go to state 59
    NEWLINE  shift, and go to state 60

    definition  go to state 61


state 54

    4 statement: DOC DOT WRITE OPENPAR arg_list . CLOSEPAR separator
   20 arg_list: arg_list . COMMA argument

    CLOSEPAR  shift, and go to state 62
    COMMA     shift, and go to state 63


state 55

   21 arg_list: argument .

    $default  reduce using rule 21 (arg_list)


state 56

   23 argument: expression .
   24 expression: expression . '+' factor
   25           | expression . '-' factor

    '+'  shift, and go to state 36
    '-'  shift, and go to state 37

    $default  reduce using rule 23 (argument)


state 57

   14 definition_list: definition_list COMMA . newline_opt definition newline_opt

    $default  reduce using rule 19 (newline_opt)

    newline_opt  go to state 64


state 58

   13 object: OPENBRACE definition_list CLOSEBRACE .

    $default  reduce using rule 13 (object)


state 59

   17 definition: ID . COLON expression

    COLON  shift, and go to state 65


state 60

   18 newline_opt: newline_opt NEWLINE .

    $default  reduce using rule 18 (newline_opt)


state 61

   15 definition_list: newline_opt definition . newline_opt

    $default  reduce using rule 19 (newline_opt)

    newline_opt  go to state 66


state 62

    4 statement: DOC DOT WRITE OPENPAR arg_list CLOSEPAR . separator

    SEMICOLON  shift, and go to state 18
    NEWLINE    shift, and go to state 19

    separator  go to state 67


state 63

   20 arg_list: arg_list COMMA . argument

    ID            shift, and go to state 22
    QUOTEDSTRING  shift, and go to state 23
    BREAKLINE     shift, and go to state 24
    NUM           shift, and go to state 25
    OPENPAR       shift, and go to state 26

    argument    go to state 68
    expression  go to state 56
    factor      go to state 28
    token       go to state 29


state 64

   14 definition_list: definition_list COMMA newline_opt . definition newline_opt
   18 newline_opt: newline_opt . NEWLINE

    ID       shift, and go to state 59
    NEWLINE  shift, and go to state 60

    definition  go to state 69


state 65

   17 definition: ID COLON . expression

    ID            shift, and go to state 22
    QUOTEDSTRING  shift, and go to state 23
    BREAKLINE     shift, and go to state 24
    NUM           shift, and go to state 25
    OPENPAR       shift, and go to state 26

    expression  go to state 70
    factor      go to state 28
    token       go to state 29


state 66

   15 definition_list: newline_opt definition newline_opt .
   18 newline_opt: newline_opt . NEWLINE

    NEWLINE  shift, and go to state 60

    $default  reduce using rule 15 (definition_list)


state 67

    4 statement: DOC DOT WRITE OPENPAR arg_list CLOSEPAR separator .

    $default  reduce using rule 4 (statement)


state 68

   20 arg_list: arg_list COMMA argument .

    $default  reduce using rule 20 (arg_list)


state 69

   14 definition_list: definition_list COMMA newline_opt definition . newline_opt

    $default  reduce using rule 19 (newline_opt)

    newline_opt  go to state 71


state 70

   17 definition: ID COLON expression .
   24 expression: expression . '+' factor
   25           | expression . '-' factor

    '+'  shift, and go to state 36
    '-'  shift, and go to state 37

    $default  reduce using rule 17 (definition)


state 71

   14 definition_list: definition_list COMMA newline_opt definition newline_opt .
   18 newline_opt: newline_opt . NEWLINE

    NEWLINE  shift, and go to state 60

    $default  reduce using rule 14 (definition_list)
